--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/cloudrun-demo:${SHORT_SHA}', '.']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ["push", "gcr.io/$PROJECT_ID/cloudrun-demo"]
+  args: ["push", "gcr.io/$PROJECT_ID/cloudrun-demo:${SHORT_SHA}"]
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'cloudrun-demo', '--image', 'gcr.io/$PROJECT_ID/cloudrun-demo:${SHORT_SHA}', '--region', 'us-east1', '--platform', 'managed']
