--- a/trial/cloudbuild.yaml
+++ b/trial/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 
-             'us-central1-docker.pkg.dev/${PROJECT_ID}/cloudrun-demo/myimage:${SHORT_SHA}', '.']
+             'us-central1-docker.pkg.dev/${PROJECT_ID}/cloudrun-demo/myimage:${SHORT_SHA}', '.', '-f', 'dockerfile-admin']
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push',  'us-central1-docker.pkg.dev/${PROJECT_ID}/cloudrun-demo/myimage:${SHORT_SHA}']
