--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE}', '--build-arg=BUILDPLATFORM=${_BUILDPLATFORM}', '.' ]
+  args: [ 'build', '-t', '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE}', '--platform=$BUILDPLATFORM', '.' ]
 images:
 - '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE}'
 
@@ -8,4 +8,4 @@ substitutions:
   _LOCATION: "us-central1"
   _REPOSITORY: "cloudrun-demo"
   _IMAGE: "image"
-  _BUILDPLATFORM: "linux/amd64"
+  # _BUILDPLATFORM: "linux/amd64"
